force-app/main/default/objects/CBS_License_Type__c/CBS_License_Type__c.object-meta.xml
<CustomObject>
    <label>Amadeus License Type</label>
    <nameField>
        <displayFormat>CBSL-{0000}</displayFormat>
        <label>CBS License Type</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amadeus License Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>