force-app/main/default/objects/CBS_License_Type__c/fields/Amadeus_License_Type__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_License_Type__c</fullName>
    <description>License type for this vendor record.</description>
    <inlineHelpText>License type for this vendor record.</inlineHelpText>
    <label>Amadeus License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounting 360 View</fullName>
            </value>
            <value>
                <fullName>Accounting Engine</fullName>
            </value>
            <value>
                <fullName>Accounting Full</fullName>
            </value>
            <value>
                <fullName>Accounting Reporting</fullName>
            </value>
            <value>
                <fullName>Adaptive Insights</fullName>
            </value>
            <value>
                <fullName>Avalara</fullName>
            </value>
            <value>
                <fullName>Bedrock</fullName>
            </value>
            <value>
                <fullName>Case Merge Premium</fullName>
            </value>
            <value>
                <fullName>Company Community for Force.com</fullName>
            </value>
            <value>
                <fullName>ConfirmIt Survey</fullName>
            </value>
            <value>
                <fullName>Conga Composer User for PSA</fullName>
            </value>
            <value>
                <fullName>Conga Configuration &amp; Pricing</fullName>
            </value>
            <value>
                <fullName>Conga Contract &amp; Lifecycle Management</fullName>
            </value>
            <value>
                <fullName>Conga Designer</fullName>
            </value>
            <value>
                <fullName>Conga Engine for Financial Management</fullName>
            </value>
            <value>
                <fullName>Conga Excel Add In</fullName>
            </value>
            <value>
                <fullName>Conga Excel Admin</fullName>
            </value>
            <value>
                <fullName>Customer Community Login</fullName>
            </value>
            <value>
                <fullName>Customer Community Plus</fullName>
            </value>
            <value>
                <fullName>Customer Community Plus Login</fullName>
            </value>
            <value>
                <fullName>DataArchiva-OrgWide Bronze Medal</fullName>
            </value>
            <value>
                <fullName>DBAmp - Hospitality Org (12 months)</fullName>
            </value>
            <value>
                <fullName>DBAmp - MTech Org (12 months)</fullName>
            </value>
            <value>
                <fullName>Einstein Analytics Plus</fullName>
            </value>
            <value>
                <fullName>Express Licenses</fullName>
            </value>
            <value>
                <fullName>Financial Management Community: 200 Login/Mo</fullName>
            </value>
            <value>
                <fullName>FM Analytics Full User</fullName>
            </value>
            <value>
                <fullName>FM Analytics View User</fullName>
            </value>
            <value>
                <fullName>Full Financial Reporting User</fullName>
            </value>
            <value>
                <fullName>Full Sandbox Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>