force-app/main/default/objects/CBS_License_Type__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>Unit cost for the license type.</description>
    <inlineHelpText>Unit cost for the license type.</inlineHelpText>
    <label>Cost Per Unit/Month</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>