force-app/main/default/objects/CBS_License_Type__c/fields/IsRetired__c.field-meta.xml
<CustomField>
    <fullName>IsRetired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>License Type has been retired. Checking this box will remove the option for users to request it.</description>
    <inlineHelpText>Checking this box will remove the option for users to request it.</inlineHelpText>
    <label>Retired</label>
    <type>Checkbox</type>
</CustomField>