force-app/main/default/objects/CBS_License_Type__c/fields/Requisition__c.field-meta.xml
<CustomField>
    <fullName>Requisition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Requisition related to this vendor regarding renewals.</description>
    <inlineHelpText>Requisition related to this vendor regarding renewals.</inlineHelpText>
    <label>Requisition</label>
    <referenceTo>SCMC__Requisition__c</referenceTo>
    <relationshipName>CBS_License_Types</relationshipName>
    <type>Lookup</type>
</CustomField>