force-app/main/default/objects/CBS_License_Type__c/fields/Reserved_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Licenses__c</fullName>
    <description>Number of licenses reserved on this license type.</description>
    <inlineHelpText>Number of licenses reserved on this license type.</inlineHelpText>
    <label>Reserved Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>