force-app/main/default/objects/CBS_License_Type__c/fields/Vendor_Billing_Info__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Billing_Info__c</fullName>
    <description>Vendor&apos;s billing and contact information for the purchase of licenses and renewals.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Vendor&apos;s billing and contact information for the purchase of licenses and renewals.</inlineHelpText>
    <label>Vendor Billing Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>