force-app/main/default/objects/CBS_License_Type__c/recordTypes/Adaptive_Insights.recordType-meta.xml
<RecordType>
    <fullName>Adaptive_Insights</fullName>
    <active>true</active>
    <label>Adaptive Insights</label>
</RecordType>