force-app/main/default/objects/CBS_License_Type__c/recordTypes/Apttus.recordType-meta.xml
<RecordType>
    <fullName>Apttus</fullName>
    <active>true</active>
    <label>Apttus</label>
</RecordType>