force-app/main/default/objects/CBS_License_Type__c/recordTypes/Avallara.recordType-meta.xml
<RecordType>
    <fullName>Avallara</fullName>
    <active>true</active>
    <label>Avallara</label>
</RecordType>