force-app/main/default/objects/CBS_License_Type__c/recordTypes/BedRock_Data.recordType-meta.xml
<RecordType>
    <fullName>BedRock_Data</fullName>
    <active>true</active>
    <label>BedRock Data</label>
</RecordType>