force-app/main/default/objects/CBS_License_Type__c/recordTypes/Confirmit.recordType-meta.xml
<RecordType>
    <fullName>Confirmit</fullName>
    <active>true</active>
    <label>Confirmit</label>
</RecordType>