force-app/main/default/objects/CBS_License_Type__c/recordTypes/Conga.recordType-meta.xml
<RecordType>
    <fullName>Conga</fullName>
    <active>true</active>
    <label>Conga</label>
</RecordType>