force-app/main/default/objects/CBS_License_Type__c/recordTypes/DataArchiva.recordType-meta.xml
<RecordType>
    <fullName>DataArchiva</fullName>
    <active>true</active>
    <label>DataArchiva</label>
</RecordType>