force-app/main/default/objects/CBS_License_Type__c/recordTypes/DecisionLink.recordType-meta.xml
<RecordType>
    <fullName>DecisionLink</fullName>
    <active>true</active>
    <label>DecisionLink</label>
</RecordType>