force-app/main/default/objects/CBS_License_Type__c/recordTypes/Financialforce.recordType-meta.xml
<RecordType>
    <fullName>Financialforce</fullName>
    <active>true</active>
    <label>Financialforce</label>
</RecordType>