force-app/main/default/objects/CBS_License_Type__c/recordTypes/ForceAmp_com.recordType-meta.xml
<RecordType>
    <fullName>ForceAmp_com</fullName>
    <active>true</active>
    <label>ForceAmp.com</label>
</RecordType>