force-app/main/default/objects/CBS_License_Type__c/recordTypes/HubSpot.recordType-meta.xml
<RecordType>
    <fullName>HubSpot</fullName>
    <active>true</active>
    <label>HubSpot</label>
</RecordType>