force-app/main/default/objects/CBS_License_Type__c/recordTypes/Insightsquared.recordType-meta.xml
<RecordType>
    <fullName>Insightsquared</fullName>
    <active>true</active>
    <label>Insightsquared</label>
</RecordType>