force-app/main/default/objects/CBS_License_Type__c/recordTypes/Internet_Creations.recordType-meta.xml
<RecordType>
    <fullName>Internet_Creations</fullName>
    <active>true</active>
    <label>Internet Creations</label>
</RecordType>