force-app/main/default/objects/CBS_License_Type__c/recordTypes/ReachForce.recordType-meta.xml
<RecordType>
    <fullName>ReachForce</fullName>
    <active>true</active>
    <label>LeadSpace</label>
</RecordType>