force-app/main/default/objects/CBS_License_Type__c/recordTypes/Success_Software_Local_Time.recordType-meta.xml
<RecordType>
    <fullName>Success_Software_Local_Time</fullName>
    <active>true</active>
    <label>Success Software - Local Time</label>
</RecordType>