force-app/main/default/objects/CBS_License_Type__c/recordTypes/ValueCloud.recordType-meta.xml
<RecordType>
    <fullName>ValueCloud</fullName>
    <active>true</active>
    <label>ValueCloud</label>
</RecordType>