force-app/main/default/objects/CBS_License_Type__c/recordTypes/Vicasso.recordType-meta.xml
<RecordType>
    <fullName>Vicasso</fullName>
    <active>true</active>
    <description>Previously Internet Creations</description>
    <label>Vicasso</label>
</RecordType>