force-app/main/default/objects/CBS_License_Type__c/recordTypes/Xactly.recordType-meta.xml
<RecordType>
    <fullName>Xactly</fullName>
    <active>true</active>
    <label>Xactly</label>
</RecordType>