force-app/main/default/objects/CBS_License_Type__c/listViews/Amadeus_License_Types_All.listView-meta.xml
<ListView>
    <fullName>Amadeus_License_Types_All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Amadeus_License_Type__c</columns>
    <columns>License_Name__c</columns>
    <columns>Total_Licenses__c</columns>
    <columns>Used_Licenses__c</columns>
    <columns>Reserved_Licenses__c</columns>
    <columns>Available_Licenses__c</columns>
    <columns>Cost__c</columns>
    <columns>Renewal_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Amadeus License Types - All</label>
    <sharedTo>
        <group>Business_Systems_Internal</group>
    </sharedTo>
</ListView>