force-app/main/default/objects/CBS_License_Type__c/listViews/Pending_Renewals.listView-meta.xml
<ListView>
    <fullName>Pending_Renewals</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Amadeus_License_Type__c</columns>
    <columns>NAME</columns>
    <columns>Renewal_Date__c</columns>
    <columns>Amadeus_Division__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Renewal_Date__c</field>
        <operation>lessThan</operation>
        <value>6/30/2021</value>
    </filters>
    <label>Pending Renewals</label>
    <sharedTo>
        <group>Business_Systems_Internal</group>
    </sharedTo>
</ListView>